[@mantine/core] Fix caret being invisible in some inputs (#8149)

--- a/packages/@mantine/core/src/components/Input/Input.module.css
+++ b/packages/@mantine/core/src/components/Input/Input.module.css
@@ -212,7 +212,7 @@
     color: var(--input-disabled-color);
   }
 
-  &:read-only {
+  &[readonly] {
     caret-color: transparent;
   }
 }
